<?xml version="1.0"?>
<package format="2">
  <name>arti_move_base</name>
  <version>1.0.0</version>
  <description>The arti_move_base package</description>
  <license>BSD</license>

  <maintainer email="c.muehlbacher@arti-robots.com">Clemens Mühlbacher</maintainer>

  <author email="a.buchegger@arti-robots.com">Alexander Buchegger</author>
  <author email="c.muehlbacher@arti-robots.com">Clemens Mühlbacher</author>
  <author email="j.steinbaeck@arti-robots.com">Josef Steinbäck</author>
  <author email="r.hoheneder@arti-robots.com">Raphael Hoheneder</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>arti_async_utils</build_depend>
  <build_depend>arti_nav_core</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>arti_nav_core_msgs</build_depend>
  <build_depend>arti_nav_core_utils</build_depend>
  <build_depend>ackermann_msgs</build_depend>
  <build_depend>arti_profiling</build_depend>
  <build_depend>arti_costmap_collision_checker</build_depend>
  <build_depend>arti_ros_param</build_depend>
  <build_depend>arti_move_base_msgs</build_depend>

  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>angles</build_export_depend>
  <build_export_depend>arti_async_utils</build_export_depend>
  <build_export_depend>arti_nav_core</build_export_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <build_export_depend>move_base_msgs</build_export_depend>
  <build_export_depend>nav_core</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>roslint</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>tf2_geometry_msgs</build_export_depend>
  <build_export_depend>arti_nav_core_msgs</build_export_depend>
  <build_export_depend>arti_nav_core_utils</build_export_depend>
  <build_export_depend>ackermann_msgs</build_export_depend>
  <build_export_depend>arti_profiling</build_export_depend>
  <build_export_depend>arti_costmap_collision_checker</build_export_depend>
  <build_export_depend>arti_ros_param</build_export_depend>
  <build_export_depend>arti_move_base_msgs</build_export_depend>

  <exec_depend>actionlib</exec_depend>
  <exec_depend>angles</exec_depend>
  <exec_depend>arti_async_utils</exec_depend>
  <exec_depend>arti_nav_core</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>nav_core</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslint</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>arti_nav_core_msgs</exec_depend>
  <exec_depend>arti_nav_core_utils</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>arti_profiling</exec_depend>
  <exec_depend>arti_costmap_collision_checker</exec_depend>
  <exec_depend>arti_ros_param</exec_depend>
  <exec_depend>arti_move_base_msgs</exec_depend>

  <export>
  </export>
</package>
