<?xml version="1.0"?>
<package format="2">
  <name>arti_move_base_msgs</name>
  <version>1.0.0</version>
  <description>The arti_move_base_msgs package</description>
  <license>BSD</license>

  <maintainer email="c.muehlbacher@arti-robots.com">Clemens Mühlbacher</maintainer>

  <author email="c.muehlbacher@arti-robots.com">Clemens Mühlbacher</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>arti_nav_core_msgs</build_depend>

  <build_export_depend>actionlib_msgs</build_export_depend>
  <build_export_depend>arti_nav_core_msgs</build_export_depend>

  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>arti_nav_core_msgs</exec_depend>

  <export>
  </export>
</package>
